--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=redlog
-spring.cloud.vault.kv.profiles=prod
+spring.cloud.vault.kv.profiles=local
 
 spring.cloud.config.enabled=false
 spring.cloud.vault.enabled=true
