--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.application.name=redlog
+spring.cloud.vault.kv.profiles=prod
 
 spring.config.import=optional:vault://
 spring.cloud.config.enabled=false
 spring.cloud.vault.enabled=true
 spring.cloud.vault.scheme=http
+spring.cloud.vault.host=192.168.1.102
 spring.cloud.vault.authentication=token
 spring.cloud.vault.token=super-token
 spring.cloud.vault.kv.enabled=true
