feat: configure database mongo as statefulset and create more connectors

--- a/kubernetes/mongo/mongo-configmap.yaml
+++ b/kubernetes/mongo/mongo-configmap.yaml
@@ -4,16 +4,8 @@ metadata:
   name: mongo-init-script
 data:
   mongo-init.js: |
-    db = db.getSiblingDB("redlog");
-
     db.createUser({
-      user: "user",
-      pwd: "pass",
-      roles: [
-      {
-      role: "readWrite",
-      db: "redlog",
-      },
-      ],
+        user: 'user',
+        pwd: 'pass',
+        roles: [{role: 'dbOwner', db: 'redlog'}]
     });
-
