--- a/kubernetes/mongo/mongo-deployment.yml
+++ b/kubernetes/mongo/mongo-deployment.yml
@@ -14,16 +14,9 @@ spec:
     spec:
       containers:
         - name: mongo-redlog
-          image: mongo:5
+          image: mongo:latest
           ports:
             - containerPort: 27017
-          env:
-            - name: MONGO_INITDB_ROOT_USERNAME
-              value: root
-            - name: MONGO_INITDB_ROOT_PASSWORD
-              value: toor
-            - name: MONGO_INITDB_DATABASE
-              value: admin
           volumeMounts:
             - name: mongo-data
               mountPath: /data/db
