--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,9 @@ spring.config.import=optional:vault://
 spring.cloud.config.enabled=false
 spring.cloud.vault.enabled=true
 spring.cloud.vault.scheme=http
-spring.cloud.vault.host=192.168.1.102
+spring.cloud.vault.host=vault
 spring.cloud.vault.authentication=token
 spring.cloud.vault.token=super-token
 spring.cloud.vault.kv.enabled=true
+
+
