--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,8 +6,15 @@ spring.cloud.vault.enabled=true
 spring.cloud.vault.kv.enabled= true
 spring.cloud.vault.token=super-token
 spring.cloud.vault.host=localhost
+spring.cloud.vault.port=8200
 spring.cloud.vault.scheme=http
 
 spring.config.import= optional:vault://
 
-#loki.url=http://192.168.1.170:3100
+redlog.source-type=file
+redlog.file.files-path=classpath:cards/
+redlog.github.github-token=${github.token}
+redlog.github.url-mapper.ALERTAPI=https://raw.githubusercontent.com/inditex/mic-alerthubapi/shifts/shifts/
+redlog.github.url-mapper.ALERTHUB=https://raw.githubusercontent.com/inditex/wsc-alerthub/shifts/shifts/
+
+#loki.url=http://localhost:3101
