--- a/pom.xml
+++ b/pom.xml
@@ -9,16 +9,18 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.github.fmcejudo.redlogs</groupId>
-    <artifactId>red-logs</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <artifactId>red-log</artifactId>
+    <version>0.0.2-SNAPSHOT</version>
     <name>red-logs</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>22</java.version>
-        <spring-cloud.version>2023.0.1</spring-cloud.version>
     </properties>
     <dependencies>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
@@ -31,6 +33,11 @@
             <groupId>org.asciidoctor</groupId>
             <artifactId>asciidoctorj</artifactId>
             <version>2.5.12</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.8.0</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
@@ -65,13 +72,7 @@
             <artifactId>mongodb</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.testcontainers</groupId>
-            <artifactId>mongodb</artifactId>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
