feat: decaouple how the actual asciidoctor content is created

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -13,8 +13,5 @@ spring.config.import= optional:vault://
 
 redlog.source-type=file
 redlog.file.files-path=classpath:cards/
-redlog.github.github-token=${github.token}
-redlog.github.url-mapper.ALERTAPI=https://raw.githubusercontent.com/inditex/mic-alerthubapi/shifts/shifts/
-redlog.github.url-mapper.ALERTHUB=https://raw.githubusercontent.com/inditex/wsc-alerthub/shifts/shifts/
-
+#redlog.github.github-token=${github.token}
 #loki.url=http://localhost:3101
