feat: update property keys used for redlogs

--- a/src/main/resources/META-INF/spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/spring-configuration-metadata.json
@@ -7,7 +7,7 @@
       "defaultValue" : "http://localhost:3100"
     },
     {
-      "name": "redlog.loki.user",
+      "name": "redlog.loki.username",
       "type": "String",
       "description": "loki username",
       "defaultValue" : ""
