feat: update loki card processor and reimplement loki client

--- a/src/main/resources/META-INF/spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/spring-configuration-metadata.json
@@ -25,7 +25,7 @@
       "defaultValue" : "http://localhost:9090"
     },
     {
-      "name": "redlog.loki.datasource",
+      "name": "redlog.loki.datasourceName",
       "type": "String",
       "description": "grafana datasource identifier",
       "defaultValue" : "default"
