feat: add an redlog executions to track every run of any card

--- a/src/test/resources/cards/VALID_CARD.yaml
+++ b/src/test/resources/cards/VALID_CARD.yaml
@@ -1,4 +1,5 @@
-common_query: '{app="redlog-sample"}'
+common_query: '{app="redlog-sample", environment="<environment>", host="<host>"}'
+parameters: ['environment', 'host']
 
 queries:
   - id: coffee
