--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,10 @@
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>21</java.version>
+        <commons-text.version>1.12.0</commons-text.version>
+        <commons-io.version>2.16.1</commons-io.version>
+        <asciidoctorj.version>2.5.12</asciidoctorj.version>
+        <jackson-dataformat-yaml.version>2.17.0</jackson-dataformat-yaml.version>
     </properties>
     <dependencies>
         <dependency>
@@ -32,17 +36,24 @@
         <dependency>
             <groupId>org.asciidoctor</groupId>
             <artifactId>asciidoctorj</artifactId>
-            <version>2.5.12</version>
+            <version>${asciidoctorj.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.8.0</version>
+            <version>${commons-io.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>${commons-text.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-yaml</artifactId>
-            <version>2.16.1</version>
+            <version>${jackson-dataformat-yaml.version}</version>
         </dependency>
 
         <dependency>
