--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <commons-text.version>1.12.0</commons-text.version>
         <commons-io.version>2.16.1</commons-io.version>
         <asciidoctorj.version>2.5.12</asciidoctorj.version>
-        <jackson-dataformat-yaml.version>2.17.0</jackson-dataformat-yaml.version>
+        <jackson.version>2.17.0</jackson.version>
     </properties>
     <dependencies>
         <dependency>
@@ -53,9 +53,13 @@
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-yaml</artifactId>
-            <version>${jackson-dataformat-yaml.version}</version>
+            <version>${jackson.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
