feat: validate card files on property paramaters, time and range

--- a/src/test/resources/cards/VALID_CARD.yaml
+++ b/src/test/resources/cards/VALID_CARD.yaml
@@ -1,5 +1,7 @@
 common_query: '{app="redlog-sample", environment="<environment>", host="<host>"}'
 parameters: ['environment', 'host']
+range: 24h
+time: 07:00
 
 queries:
   - id: coffee
