--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>3.3.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.github.fmcejudo.redlogs</groupId>
+    <groupId>com.github.fmcejudo</groupId>
     <artifactId>red-log</artifactId>
     <version>0.0.4-SNAPSHOT</version>
     <name>red-logs</name>
