--- a/red-log-api/pom.xml
+++ b/red-log-api/pom.xml
@@ -15,6 +15,13 @@
     <java.version>21</java.version>
     <nexus.plugin.version>1.6.13</nexus.plugin.version>
   </properties>
+  <dependencies>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter</artifactId>
+      <scope>provided</scope>
+    </dependency>
+  </dependencies>
 
   <build>
     <plugins>
