--- a/red-log-processor-loki/pom.xml
+++ b/red-log-processor-loki/pom.xml
@@ -134,7 +134,7 @@
         <executions>
           <execution>
             <id>sign-artifacts</id>
-            <phase>verify</phase>
+            <phase>deploy</phase>
             <goals>
               <goal>sign</goal>
             </goals>
