--- a/red-log-mongo/pom.xml
+++ b/red-log-mongo/pom.xml
@@ -142,7 +142,7 @@
                 <executions>
                     <execution>
                         <id>sign-artifacts</id>
-                        <phase>deploy</phase>
+                        <phase>verify</phase>
                         <goals>
                             <goal>sign</goal>
                         </goals>
