feat: build loki response with its url link

--- a/red-log-core/src/test/resources/cards/VALID_CARD.yaml
+++ b/red-log-core/src/test/resources/cards/VALID_CARD.yaml
@@ -10,15 +10,16 @@ queries:
     query: |
         {app="redlog-sample", environment="<environment>", host="<host>"}
         |~ `likes coffee`
+    grafana-dashboard: http://localhost:3000/
 
   - id: chocolate
     description: People who like CHOCOLATE
     processor: LOKI
-    custom:
-        type: SUMMARY
-        query: |
-            {app="redlog-sample", environment="<environment>", host="<host>"}
-            |~ `likes chocolate`
+    type: SUMMARY
+    query: |
+        {app="redlog-sample", environment="<environment>", host="<host>"}
+        |~ `likes chocolate`
+    grafana-dashboard: http://localhost:3000/
 
   - id: entities
     description: Read entity from DB
