--- a/red-log-core/pom.xml
+++ b/red-log-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.github.fmcejudo.redlogs</groupId>
         <artifactId>red-log</artifactId>
-        <version>0.0.12-SNAPSHOT</version>
+        <version>0.0.12</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
