--- a/red-log-core/pom.xml
+++ b/red-log-core/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>red-log-core</artifactId>
-    <name>red-logs-core</name>
+    <name>red-log-core</name>
 
     <properties>
         <java.version>21</java.version>
