--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>io.github.fmcejudo.redlogs</groupId>
   <artifactId>red-log</artifactId>
-  <version>0.0.14</version>
+  <version>0.0.15-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>red-log</name>
@@ -30,7 +30,7 @@
     <connection>scm:git@github.com:fmcejudo/redlog.git</connection>
     <developerConnection>scm:git:git@github.com:fmcejudo/redlog.git</developerConnection>
     <url>https://github.com/fmcejudo/redlog</url>
-    <tag>red-log-0.0.14</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <properties>
