--- a/red-log-processor-mongo/pom.xml
+++ b/red-log-processor-mongo/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>io.github.fmcejudo.redlogs</groupId>
     <artifactId>red-log</artifactId>
-    <version>0.0.15</version>
+    <version>0.0.16-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
